@@ -3,6 +3,7 @@
 	* Resolves #48156: Add backend module to generate language packs
 	* Resolves #48161: Localization should honour alternative languages
 	* Resolves #48162: Make pibase-style api usable in backend
+	* Resolves #48163: Add repository method to retrieve all non-constructed and non-sacred languages
 
 2013-03-05  Stanislas Rolland  <typo3@sjbr.ca>
 
